uf_ulog_macro/tests/ui/fail_bad_timestamp_type.rs
#[derive(uf_ulog_macro::ULogData)]
struct BadTimestampType {
    timestamp: u32,
    x: f32,
}

fn main() {}
